--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -26,7 +26,7 @@ jobs:
 
             - name: Commit changes
               run: |
-                  git config --local user.email "firmnardians@gmail.com"
+                  git config --local user.email "helloafirsyah@gmail.com"
                   git config --local user.name "firmnardians"
                   git add -A
                   git commit -m "chore: auto commit"
